# SeisMix

./: .gitattributes  .gitignore  MANIFEST.in  Pipfile  README.md  optional_requirements.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml
.ipynb_checkpoints/: .fsc_analysis-checkpoint.ipynb.icloud  .gom_internal_wave_analysis-checkpoint.ipynb.icloud  fsc_analysis-checkpoint.ipynb  gom_internal_wave_analysis-checkpoint.ipynb
SeisMix/: average_spectrum.py  chi_square_analysis.py  compute_gk91_horizontal_spectra.py  contours_to_midpoints.py  contours_to_midpoints_fs3d.py  estimate_internal_wave_epsilon.py  estimate_turbulent_epsilon.py  gm_model_fitting.py  individual_reflections_spectral_analysis.py  miscellaneous_functions.py  noise_analysis.py  read_seismic_data.py  reflection_tracking.py  run_average_spectrum_turbulence_estimation.py  straight_line_fitting.py
example_data/input_segy/: .0801P1_rsg_gp6p25ms50m_sbm_dwrm1470_sdc_bt30sl24_ds1.5_ap1_sm2.segy.icloud
examples/: fsc_analysis.ipynb
paper/: paper.bib  paper.md
pip-wheel-metadata/SeisMix.dist-info/: METADATA  top_level.txt
python_mixing_functions/: compute_gk91_horizontal_spectra.py  compute_gm76_horizontal_spectra.py  four_component_model_subrange_fitting.py
src/SeisMix/: _version.py  contours_to_midpoints.py  estimate_internal_wave_epsilon.py  estimate_turbulent_epsilon.py  four_component_model_subrange_fitting.py  gm_model_fitting.py  run_average_spectrum_turbulence_estimation.py  straight_line_fitting.py
src/SeisMix.egg-info/: PKG-INFO  SOURCES.txt
