[metadata]
name = SeisMix
version = 0.0.1
author = Alex Dickinson
author_email = nad38@cantab.ac.uk
description = WHAT IS THE REASON YOU BUILD THIS PROJECT AND WHAT IT DOES
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-dickinson/SeisMix
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/SeisMix/_version.py
versionfile_build = SeisMix/_version.py
tag_prefix =
parentdir_prefix =